--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "test": "jest"
   },
   "dependencies": {
+    "@millicast/sdk": "^0.1.46",
     "react": "18.2.0",
-    "react-native": "0.74.3"
+    "react-native": "0.74.3",
+    "react-native-webrtc": "^124.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
